<resources>
    <string name="app_name">Decoration</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="i_forgot_my_password">I Forgot My Password</string>
    <string name="full_name">Full Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="send">Send</string>
    <string name="guest">Guest</string>
    <string name="user_type">User Type:</string>
    <string name="log_out">Log out</string>

    <string-array name="user_type">
        <item>Customer</item>
        <item>Seller</item>
        <item>Decoration Engineer</item>
    </string-array>

    <string-array name="colors">
        <item>White</item>
        <item>Black</item>
        <item>Brown</item>
        <item>Green</item>
        <item>Blue</item>
        <item>Yellow</item>
        <item>Red</item>
        <item>Purple</item>
        <item>Pink</item>
    </string-array>

    <string-array name="months">
        <item>01</item>
        <item>02</item>
        <item>03</item>
        <item>04</item>
        <item>05</item>
        <item>06</item>
        <item>07</item>
        <item>08</item>
        <item>09</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>

    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Guest</string>
    <string name="nav_header_subtitle">You have not logged in</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="reset_password">Reset Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="title_activity_maps">Map</string>
</resources>
